# AI-Content-Factory

./: .env.example  .gitignore  .vercelignore  AGENTS.md  AI_DEVELOPMENT_MANUAL.md  ARCHITECTURE.md  ARCHITECTURE_FREEZE_v1.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_RELATIONSHIPS.md  ARCHITECT_MASTER_REVIEW_2026-07-04.md  BUSINESS_VISION.md  COMPANY_BOOT_ARCHITECTURE.md  COMPANY_RUNTIME_ARCHITECTURE.md  DECISION_ARCHITECTURE.md  EMPLOYEE_LIFECYCLE_ARCHITECTURE.md  ENGINEERING_BLUEPRINT_AI_DIRECTOR.md  ENGINEERING_BLUEPRINT_AI_EXECUTION.md  ENGINEERING_BLUEPRINT_COMPANY_RUNTIME.md  ENGINEERING_BLUEPRINT_CONVERSATION_RUNTIME.md  ENGINEERING_BLUEPRINT_DECISION_ENGINE.md  ENGINEERING_BLUEPRINT_EMPLOYEE.md  ENGINEERING_BLUEPRINT_KNOWLEDGE_DIRECTOR.md  ENGINEERING_BLUEPRINT_LEARNING_ENGINE.md  ENGINEERING_BLUEPRINT_LLM_GATEWAY.md  ENGINEERING_BLUEPRINT_MEMORY_RUNTIME.md  ENGINEERING_BLUEPRINT_OPERATIONS_DIRECTOR.md  ENGINEERING_BLUEPRINT_ORCHESTRATOR.md  ENGINEERING_BLUEPRINT_ORGANIZATIONAL_INTEGRATION.md  ENGINEERING_BLUEPRINT_PLATFORM_DIRECTOR.md  ENGINEERING_BLUEPRINT_POLICY_ENGINE.md  EXECUTION_FLOW_ARCHITECTURE.md  INTEGRATION_ARCHITECTURE.md  MASTER_ROADMAP.md  MESSAGE_SYSTEM_ARCHITECTURE.md  OBSERVABILITY_ARCHITECTURE.md  OFFICE_BEHAVIOR_ARCHITECTURE.md  ONBOARDING.md  PLATFORM_AUDIT.md  PLATFORM_CONSTITUTION.md  PLATFORM_DEPENDENCY_GRAPH.md  (+130 more)
.github/: README.md
api/: __init__.py  hotmart.py
app/: globals.css  page.tsx
assets/: README.md
config/: README.md
core/: README.md  __init__.py  observability.py  runtime.py
db/: schema.ts
docs/: CURRENT_STATE_2026-07-10.md  IDEAS.md  README.md  development-standards.md  repository-structure.md
drizzle/: 0001_rapid_jack_flag.sql  0003_heavy_shriek.sql  0004_tearful_centennial.sql  0005_misty_agent_zero.sql
engines/: README.md  __init__.py
projects/: README.md
scripts/: kokoro_tts_runner.py  run_all_demos.py  run_dashboard_media_production_worker.py  run_dashboard_production_worker.py  run_product_dashboard_worker.py  (+1 more)
shared/: README.md  (+1 more)
(+571 files in other folders)
