[project]
name = "ai-content-factory"
version = "0.1.0"
description = "Plataforma modular de criação, automação, publicação e análise de conteúdo utilizando IA"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "psycopg[binary]>=3.2,<4",
]

[project.scripts]
acf = "main:main"

[tool.vercel]
entrypoint = "api.hotmart:handler"

# ==================================================
# Black — Formatter
# ==================================================
[tool.black]
line-length = 88
target-version = ["py312"]

# ==================================================
# Ruff — Linter
# ==================================================
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["engines", "core", "shared"]

# ==================================================
# mypy — Type Checker
# ==================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ==================================================
# pytest — Test Runner
# ==================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external services",
]
